apps/base/online-boutique/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onlineboutique
  labels:
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
